galliumos-skylake (2.9903) bismuth; urgency=medium

  * Add headphone plug/unplug support for caroline
  * Remove race-y, brittle "sleep 5; whack audio settings" that broke
    in 4.16.18 (usually).
  * Change speaker vs headphone priority to help pulseaudio.
  * explicitly set BIQ and jack defaults to avoid randomness.
  * Clean up pulseaudio caches that cause anyone who created an
    account and logged in under 3.0beta* to have poisoned cached
    pulseaudio settings, that would cause good/bad behavior to
    be confusingly "sticky".
  * move card init from HiFi.conf verb to sklnau8825adi.conf, then
    retire galliumos-init-skylake init completely

 -- bcarnes <bmcarnes@gmail.com>  Tue, 04 Jun 2019 10:10:38 -0700

galliumos-skylake (2.9902) bismuth; urgency=medium

  * Prepare for GalliumOS 3.0

 -- reynhout <reynhout@galliumos.org>  Sun, 06 May 2018 07:04:41 +0000

galliumos-skylake (2.0.2) xenon; urgency=medium

  * Add CHELL to initial sklnau8825adi audio support

 -- reynhout <reynhout@galliumos.org>  Sat, 20 Jan 2018 16:54:24 +0000

galliumos-skylake (2.0.1) xenon; urgency=medium

  * Add initial sklnau8825adi audio configuration (CAROLINE)
  * Break dependency on galliumos-broadwell

 -- reynhout <reynhout@galliumos.org>  Fri, 19 Jan 2018 04:16:15 +0000

galliumos-skylake (2.0.0) xenon; urgency=medium

  * Initial Skylake package
    - Depends on galliumos-broadwell
    - Currently adds no new config

 -- reynhout <reynhout@galliumos.org>  Sun, 02 Oct 2016 19:17:02 +0000