@@ -12,8 +12,8 @@ SectionVerb {
     }
 }
 
-SectionDevice."Speakers".0 {
-    Comment "Speakers"
+SectionDevice."Headphone".0 {
+    Comment "Headphone"
 
     Value {
         CoupledMixers "Left Master,Right Master"
@@ -22,9 +22,9 @@ SectionDevice."Speakers".0 {
 
     EnableSequence [
         cdev "hw:sklnau8825adi"
-        cset "name='codec0_out mo media0_in mi Switch' on"
-        cset "name='codec1_out mo media0_in mi Switch' off"
-        cset "name='Headphone Jack Switch' off"
+        cset "name='codec0_out mo media0_in mi Switch' off"
+        cset "name='codec1_out mo media0_in mi Switch' on"
+        cset "name='Headphone Jack Switch' on"
     ]
 
     DisableSequence [
