@@ -12,8 +12,8 @@ SectionVerb {
     }
 }
 
-SectionDevice."Speakers".0 {
-    Comment "Speakers"
+SectionDevice."Headphone".0 {
+    Comment "Headphone"
 
     Value {
         CoupledMixers "Left Master,Right Master"
@@ -22,23 +22,23 @@ SectionDevice."Speakers".0 {
 
     EnableSequence [
         cdev "hw:sklnau8825adi"
-        cset "name='codec0_out mo media0_in mi Switch' on"
-        cset "name='codec1_out mo media0_in mi Switch' off"
-        cset "name='Headphone Jack Switch' off"
+        cset "name='codec0_out mo media0_in mi Switch' off"
+        cset "name='codec1_out mo media0_in mi Switch' on"
+        cset "name='Headphone Jack Switch' on"
     ]
 
     DisableSequence [
     ]
 }
 
-SectionDevice."Mic".0 {
-    Comment "Mic"
+SectionDevice."Headet Mic".0 {
+    Comment "Headset Mic"
 
     EnableSequence [
         cdev "hw:sklnau8825adi"
-        cset "name='Headset Mic Switch' off"
-        cset "name='media0_out mo codec0_in mi Switch' off"
-        cset "name='media0_out mo dmic01_hifi_in mi Switch' on"
+        cset "name='Headset Mic Switch' on"
+        cset "name='media0_out mo codec0_in mi Switch' on"
+        cset "name='media0_out mo dmic01_hifi_in mi Switch' off"
     ]
 
     DisableSequence [
