@@ -1,21 +1,31 @@
 Comment "Caroline internal card"
 
 SectionUseCase."HiFi" {
-	File "HiFi.conf"
-	Comment "Default"
+    File "HiFi.conf"
+    Comment "Default Profile"
+}
+
+SectionUseCase."Headphone-Profile" {
+    File "Headphone-Profile.conf"
+    Comment "Headphone Profile"
+}
+
+SectionUseCase."Headset-Profile" {
+    File "Headset-Profile.conf"
+    Comment "Headset Profile"
 }
 
 SectionDefaults [
-		cdev "hw:sklnau8825adi"
-		cset "name='codec1_out mo media0_in mi Switch' off"
-		cset "name='codec0_out mo media0_in mi Switch' on"
-		cset "name='DAC Oversampling Rate' 128"
-		cset "name='Headset Mic Switch' off"
-		cset "name='media0_out mo codec0_in mi Switch' off"
-		cset "name='media0_out mo dmic01_hifi_in mi Switch' on"
-		cset "name='Pin5-Port0 Mux' 1"
-		cset "name='Pin6-Port0 Mux' 2"
-		cset "name='Pin7-Port0 Mux' 3"
-		cset "name='Headphone Jack Switch' off"
-		cset "name='BIQ Coefficients' 0"
+    cdev "hw:sklnau8825adi"
+    cset "name='codec1_out mo media0_in mi Switch' off"
+    cset "name='codec0_out mo media0_in mi Switch' on"
+    cset "name='DAC Oversampling Rate' 128"
+    cset "name='Headset Mic Switch' off"
+    cset "name='media0_out mo codec0_in mi Switch' off"
+    cset "name='media0_out mo dmic01_hifi_in mi Switch' on"
+    cset "name='Pin5-Port0 Mux' 1"
+    cset "name='Pin6-Port0 Mux' 2"
+    cset "name='Pin7-Port0 Mux' 3"
+    cset "name='Headphone Jack Switch' off"
+    cset "name='BIQ Coefficients' 0"
 ]
